tests/fsharp/conformance/inference/E_TwoEqualYypeVariables02rec.bsl

E_TwoEqualYypeVariables02rec.fsx(60,37,60,47): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'a

Candidates:
 - static member C12.M: x: 'a * y: 'a -> One
 - static member C12.M: x: 'a * y: 'b -> Two

E_TwoEqualYypeVariables02rec.fsx(61,37,61,47): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'a

Candidates:
 - static member C14.M: x: 'a * y: 'a -> One
 - static member C14.M: x: 'a * y: C -> Four

E_TwoEqualYypeVariables02rec.fsx(62,37,62,47): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'a

Candidates:
 - static member C24.M: x: 'a * y: 'b -> Two
 - static member C24.M: x: 'a * y: C -> Four

E_TwoEqualYypeVariables02rec.fsx(63,37,63,48): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'a

Candidates:
 - static member C123.M: x: 'a * y: 'a -> One
 - static member C123.M: x: 'a * y: 'b -> Two
 - static member C123.M: x: 'a * y: int -> Three

E_TwoEqualYypeVariables02rec.fsx(64,37,64,49): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'a

Candidates:
 - static member C1234.M: x: 'a * y: 'a -> One
 - static member C1234.M: x: 'a * y: 'b -> Two
 - static member C1234.M: x: 'a * y: C -> Four
 - static member C1234.M: x: 'a * y: int -> Three

E_TwoEqualYypeVariables02rec.fsx(65,37,65,50): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'a

Candidates:
 - static member C14.M: x: 'a * y: 'a -> One
 - static member C14.M: x: 'a * y: C -> Four
