tests/fsharp/conformance/inference/E_TwoEqualYypeVariables02rec.fsx
// #Regression #TypeInference 
// Regression test for FSHARP1.0:4758
// Type Inference
// Check Method Disambiguation When User Generic Variable Get Instantiated By Overload Resolution
module M
// These different return types are used to determine which overload got chosen
type One = | One
type Two = | Two
type Three = | Three
type Four = | Four

// An unsealed type
type C() = 
    member x.P = 1
    
type C1 =
    static member M<'a>(x:'a,y:'a) = One

type C2 =
    static member M<'a,'b>(x:'a,y:'b) = Two

type C3 =    
    static member M<'a>(x:'a,y:int) = Three

type C4 =    
    static member M<'a>(x:'a,y:C) = Four

type C12 =
    static member M<'a>(x:'a,y:'a) = One
    static member M<'a,'b>(x:'a,y:'b) = Two

type C23 =
    static member M<'a,'b>(x:'a,y:'b) = Two
    static member M<'a>(x:'a,y:int) = Three

type C13 =
    static member M<'a>(x:'a,y:'a) = One
    static member M<'a>(x:'a,y:int) = Three

type C14 =
    static member M<'a>(x:'a,y:'a) = One
    static member M<'a>(x:'a,y:C) = Four

type C24 =
    static member M<'a,'b>(x:'a,y:'b) = Two
    static member M<'a>(x:'a,y:C) = Four

type C123 =
    static member M<'a>(x:'a,y:'a) = One
    static member M<'a,'b>(x:'a,y:'b) = Two
    static member M<'a>(x:'a,y:int) = Three

type C1234 =
    static member M<'a>(x:'a,y:'a) = One
    static member M<'a,'b>(x:'a,y:'b) = Two
    static member M<'a>(x:'a,y:int) = Three
    static member M<'a>(x:'a,y:C) = Four

module M2Rec =
    let rec gB12    (x:'a) (y:'a) = C12.M(x,y)           // expect: ambiguity error
    let rec gB14    (x:'a) (y:'a) = C14.M(x,y)           // expect: ambiguity error
    let rec gB24    (x:'a) (y:'a) = C24.M(x,y)           // expect: ambiguity error
    let rec gB123   (x:'a) (y:'a) = C123.M(x,y)          // expect: ambiguity error
    let rec gB1234  (x:'a) (y:'a) = C1234.M(x,y)         // expect: ambiguity error
    let rec gD14    (x:'a) (y:'a) = C14.M<_>(x,y) = One      // expect: ambiguity error
